# lambda-rust

./: .gitignore  .gitlab-ci.yml  _CoqProject  coq-lambda-rust.opam
theories/lang/: adequacy.v  heap.v  lang.v  lifting.v  notation.v  proofmode.v  tactics.v
theories/lang/lib/: arc.v  memcpy.v  new_delete.v
theories/lifetime/: frac_borrow.v
theories/lifetime/model/: primitive.v
theories/slf/: basics.v
theories/typing/: bool.v  borrow.v  fixpoint.v  function.v  int.v  lft_contexts.v  own.v  product.v  product_split.v  programs.v  record.v  shr_bor.v  sum.v  type.v  type_context.v  type_sum.v  typing.v  uninit.v  uniq_bor.v
theories/typing/examples/: fixpoint.v  records.v
theories/typing/lib/: arc.v  brandedvec.v  cell.v  fake_shared.v  ghostcell.v  join.v  option.v  spawn.v  take_mut.v
theories/typing/lib/mutex/: mutex.v  mutexguard.v
theories/typing/lib/rc/: rc.v  weak.v
theories/typing/lib/refcell/: ref.v  ref_code.v  refcell.v  refcell_code.v  refmut.v  refmut_code.v
theories/typing/lib/rwlock/: rwlock.v  rwlock_code.v  rwlockreadguard.v  rwlockreadguard_code.v  rwlockwriteguard.v  rwlockwriteguard_code.v
